[gd_scene load_steps=21 format=3 uid="uid://1m6larhfi3hm"]

[ext_resource type="Script" path="res://world/objects/charging_enemy.gd" id="1_41gjj"]
[ext_resource type="Texture2D" uid="uid://bkpks82ek3ibv" path="res://online-assets/kenney_pixel-platformer/Tilemap/tilemap-characters_packed.png" id="1_x2tm5"]
[ext_resource type="PackedScene" uid="uid://dyrpmbpr8barb" path="res://world/objects/killbox.tscn" id="3_marnq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4w6ij"]
size = Vector2(15, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlbsd"]
size = Vector2(24, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7nnr"]
size = Vector2(11, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8py5"]
size = Vector2(20, 18)

[sub_resource type="Animation" id="Animation_alfji"]
resource_name = "idle"
length = 0.60002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_pondf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_l80st"]
resource_name = "grow"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 21, 19, 21, 19, 21]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_charge"
}]
}

[sub_resource type="Animation" id="Animation_nlkeu"]
resource_name = "charge"
length = 0.750008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 21, 22, 23, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_charge"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0cgw"]
_data = {
"RESET": SubResource("Animation_pondf"),
"charge": SubResource("Animation_nlkeu"),
"grow": SubResource("Animation_l80st"),
"idle": SubResource("Animation_alfji")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p22sa"]
animation = &"charge"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w60ww"]
animation = &"grow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7cj44"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_65am7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1mt2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4j3ko"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6m7b2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bxaob"]
states/End/position = Vector2(701, 101)
states/charge/node = SubResource("AnimationNodeAnimation_p22sa")
states/charge/position = Vector2(591.5, -32.9463)
states/grow/node = SubResource("AnimationNodeAnimation_w60ww")
states/grow/position = Vector2(427.75, -33.1963)
states/idle/node = SubResource("AnimationNodeAnimation_7cj44")
states/idle/position = Vector2(429.5, 104)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_65am7"), "idle", "grow", SubResource("AnimationNodeStateMachineTransition_s1mt2"), "grow", "charge", SubResource("AnimationNodeStateMachineTransition_4j3ko"), "charge", "idle", SubResource("AnimationNodeStateMachineTransition_6m7b2")]
graph_offset = Vector2(0, -99.1963)

[node name="ChargingEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_41gjj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x2tm5")
hframes = 9
vframes = 3
frame = 18
metadata/_edit_lock_ = true

[node name="SmallCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_4w6ij")
metadata/_edit_lock_ = true

[node name="BigCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wlbsd")
metadata/_edit_lock_ = true

[node name="SmallKillbox" parent="." instance=ExtResource("3_marnq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallKillbox"]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_e7nnr")
debug_color = Color(1, 0, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="BigKillbox" parent="." instance=ExtResource("3_marnq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigKillbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_s8py5")
debug_color = Color(1, 0, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-7, 13)
metadata/_edit_lock_ = true

[node name="RayCast2DRight" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(7, 13)
metadata/_edit_lock_ = true

[node name="Scan" type="RayCast2D" parent="."]
target_position = Vector2(-144, 0)
collision_mask = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_d0cgw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_d0cgw")
}
tree_root = SubResource("AnimationNodeStateMachine_bxaob")
anim_player = NodePath("../AnimationPlayer")
